--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://backend-ecommerce-fggr.onrender.com/api
+REACT_APP_API_URL=http://localhost:3000/api
 REACT_APP_FB_ID=2344618759065854
 REACT_APP_IS_LOCAL=true
