--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://backend-ecommerce-fggr.onrender.com"
+  "proxy": "http://localhost:3001"
 }
