--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-html-table-to-excel": "^2.0.0",
     "react-paypal-button-v2": "^2.6.3",
